--- a/Linguagens/Udemy/CSS/Anotações CSS/Aula-63/estilizando_tabelas.html
+++ b/Linguagens/Udemy/CSS/Anotações CSS/Aula-63/estilizando_tabelas.html
@@ -9,7 +9,38 @@
 </head>
 <body>
     
+        <h2>Estilizando tabelas</h2>
+        <table>
+            <tr>
+                <th>Código</th>
+                <th>Produto</th>
+                <th class="numero">Preço</th>
+            </tr>
+            
+            <tr class="alternado">
+                <td>001</td>
+                <td>Notebook</td>
+                <td class="numero">R$ 2.500</td>
+            </tr>
 
+            <tr>
+                <td>002</td>
+                <td>Computador</td>
+                <td class="numero">R$ 5.000</td>
+            </tr>
+
+            <tr class="alternado">
+                <td>003</td>
+                <td>Tablet</td>
+                <td class="numero">R$ 800</td>
+            </tr>
+
+            <tr>
+                <td>004</td>
+                <td>Celular</td>
+                <td class="numero">R$ 1.200</td>
+            </tr>
+        </table>
 
 
 
