--- a/Linguagens/Udemy/CSS/Anotações CSS/Aula-66/Arredondamento_imagens.html
+++ b/Linguagens/Udemy/CSS/Anotações CSS/Aula-66/Arredondamento_imagens.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     
-    
+    <div class="caixa">
+        <h2>Cabeçalho</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium alias esse non ab praesentium quo quidem fuga temporibus expedita. Et beatae alias illo perspiciatis laborum! Omnis at doloremque nihil magnam!</p>
+    </div>
 
 </body>
 </html>
