--- a/Linguagens/Udemy/CSS/Projeto_Noticias_Cidade/index.html
+++ b/Linguagens/Udemy/CSS/Projeto_Noticias_Cidade/index.html
@@ -10,12 +10,107 @@
 <body>
     <header>
         <nav>
-            
+            <div id="img_topo">
+                <img src="imagens/detalhe-topo.png" alt="">
+            </div>
         </nav>
     </header>
+
+
     <main>
-        <h1>página principal</h1>        
+        <div id="conteudo_principal">
+       
+            <div id="entrevistas">
+                <div class="title">
+                    <h2>Entrevistas</h2>
+                </div>
+
+                <ul>
+                 <li>José Almeida</li>
+                 <li>Felipe Silva</li>
+                 <li>Renato Rodrigues</li>
+                 <li>Abelardo Silveira</li>
+                 <li>André Carlos</li>
+                 <li>Márcio Mello</li>
+                 <li>João Pedro</li>
+                 <li>fernando Weiss</li>
+                </ul>
+             </div>
+
+            <div class="boxes">
+                <div class="title">
+                    <h2>Última entrevista</h2>
+                </div>
+
+                <div class="conteudo">
+                    <h3 id="entrevista">
+                        ENTREVISTA COM FELIPE SILVA
+                    </h3>
+
+                    <img src="imagens/doutor.jpg" alt="" class="img_conteudo">
+
+                    <p class="legenda">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora praesentium quia molestiae qui ad ratione voluptatibus.
+                    </p>
+
+                    <a href="" class="leia">Leia mais!</a>
+                </div>
+
+            </div>
+
+            <div class="boxes">
+                <div class="title">
+                    <h2>Destaque</h2>
+                </div>
+
+                <div class="conteudo">
+                    <div id="legislacao">
+                        <h3>Nova Legislação</h3>
+                    </div>
+
+                    <img src="imagens/taxi.jpg" alt="" class="img_conteudo">
+
+                    <p class="legenda">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui expedita suscipit optio. Aliquam voluptatem id recusandae dicta aliquid 
+                    </p>
+
+                    <a href="" class="leia">Leia mais!</a>
+                </div>
+            </div>
+
+            <div class="boxes">
+                <h2 class="title">
+                    Mundo
+                </h2>
+
+                <img src="imagens/mundo.jpg" alt="" class="img_conteudo">
+                <p class="legenda">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui expedita suscipit optio. Aliquam voluptatem id recusandae dicta aliquid 
+                </p>
+
+                <a href="" class="leia">Leia mais!</a>
+            </div>
+
+            <div class="boxes">
+                <h2 class="title">
+                    Notícias recentes
+                </h2>
+
+                <img src="imagens/mundo.jpg" alt="" class="img_conteudo">
+                <p class="legenda">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui expedita suscipit optio. Aliquam voluptatem id recusandae dicta aliquid 
+                </p>
+
+                <a href="" class="leia">Leia mais!</a>
+            </div>
+
+        </div><!--FIM CONTEUDO PRINCIPAL-->
+
     </main>
+
+        <div class="clear"></div>
+
+
     <footer>
         Rodapé
     </footer>
