--- a/Linguagens/Udemy/CSS/Projeto_Noticias_Cidade/index.html
+++ b/Linguagens/Udemy/CSS/Projeto_Noticias_Cidade/index.html
@@ -11,7 +11,8 @@
     <header>
         <nav>
             <div id="img_topo">
-                <img src="imagens/detalhe-topo.png" alt="">
+                <!-- <img src="imagens/logo.png" alt="" id="logo"> -->
+               
             </div>
         </nav>
     </header>
