--- a/Linguagens/Udemy/CSS/Projeto_Noticias_Cidade/index.html
+++ b/Linguagens/Udemy/CSS/Projeto_Noticias_Cidade/index.html
@@ -11,8 +11,18 @@
     <header>
         <nav>
             <div id="img_topo">
-                <!-- <img src="imagens/logo.png" alt="" id="logo"> -->
-               
+                <img src="imagens/logo.png" alt="" id="logo">
+            </div>
+            <div class="link_nav">
+                <ul id="navegacao">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Brasil</a></li>
+                    <li><a href="">Internacional</a></li>
+                    <li><a href="">Econômia</a></li>
+                    <li><a href="">Saúde</a></li>
+                    <li><a href="">Ciência</a></li>
+                    <li><a href="">Fotos</a></li>
+                </ul>
             </div>
         </nav>
     </header>
