--- a/Linguagens/Udemy/CSS/Anotações CSS/Aula-80/parallax.html
+++ b/Linguagens/Udemy/CSS/Anotações CSS/Aula-80/parallax.html
@@ -7,6 +7,86 @@
     <link rel="stylesheet" href="style80.css">
 </head>
 <body>
-    
+    <div class="caixa1">
+        <div class="conteudo-titulo">
+            <span class="titulo">Passeio de balões</span>
+        </div>
+    </div>
+
+    <div class="conteudo">
+        <h3>Parallax</h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae harum nostrum delectus omnis earum repellendus pariatur? Facilis ad, beatae tempora illo qui, libero animi sequi et, quis veritatis delectus fugit!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta accusamus adipisci omnis sed at aperiam molestiae corrupti facilis, hic accusantium perspiciatis sapiente provident eaque laborum dolorem voluptate quam ipsum alias.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure ipsum nihil tempora? Magnam, officia! Accusamus asperiores, qui consectetur consequuntur mollitia amet, neque hic fugit, libero impedit vel enim cumque laudantium?
+        </p>
+    </div>
+
+    <div class="caixa2">
+        <div class="conteudo-titulo">
+            <span class="titulo">Pegando a estrada</span>
+        </div>
+    </div>
+
+    <div class="conteudo">
+        <h3>Parallax</h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae harum nostrum delectus omnis earum repellendus pariatur? Facilis ad, beatae tempora illo qui, libero animi sequi et, quis veritatis delectus fugit!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta accusamus adipisci omnis sed at aperiam molestiae corrupti facilis, hic accusantium perspiciatis sapiente provident eaque laborum dolorem voluptate quam ipsum alias.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure ipsum nihil tempora? Magnam, officia! Accusamus asperiores, qui consectetur consequuntur mollitia amet, neque hic fugit, libero impedit vel enim cumque laudantium?
+        </p>
+    </div>
+
+    <div class="caixa3">
+        <div class="conteudo-titulo">
+            <span class="titulo">Pôr do sol</span>
+        </div>
+    </div>
+
+    <div class="conteudo">
+        <h3>Parallax</h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae harum nostrum delectus omnis earum repellendus pariatur? Facilis ad, beatae tempora illo qui, libero animi sequi et, quis veritatis delectus fugit!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta accusamus adipisci omnis sed at aperiam molestiae corrupti facilis, hic accusantium perspiciatis sapiente provident eaque laborum dolorem voluptate quam ipsum alias.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure ipsum nihil tempora? Magnam, officia! Accusamus asperiores, qui consectetur consequuntur mollitia amet, neque hic fugit, libero impedit vel enim cumque laudantium?
+        </p>
+    </div>
+
+    <div class="caixa4">
+        <div class="conteudo-titulo">
+            <span class="titulo">Montanhas</span>
+        </div>
+    </div>
+
+    <div class="conteudo">
+        <h3>Parallax</h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae harum nostrum delectus omnis earum repellendus pariatur? Facilis ad, beatae tempora illo qui, libero animi sequi et, quis veritatis delectus fugit!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta accusamus adipisci omnis sed at aperiam molestiae corrupti facilis, hic accusantium perspiciatis sapiente provident eaque laborum dolorem voluptate quam ipsum alias.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure ipsum nihil tempora? Magnam, officia! Accusamus asperiores, qui consectetur consequuntur mollitia amet, neque hic fugit, libero impedit vel enim cumque laudantium?
+        </p>
+    </div>
+
+    <div class="caixa5">
+        <div class="conteudo-titulo">
+            <span class="titulo">Alto mar</span>
+        </div>
+    </div>
+
+    <div class="conteudo">
+        <h3>Parallax</h3>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae harum nostrum delectus omnis earum repellendus pariatur? Facilis ad, beatae tempora illo qui, libero animi sequi et, quis veritatis delectus fugit!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta accusamus adipisci omnis sed at aperiam molestiae corrupti facilis, hic accusantium perspiciatis sapiente provident eaque laborum dolorem voluptate quam ipsum alias.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure ipsum nihil tempora? Magnam, officia! Accusamus asperiores, qui consectetur consequuntur mollitia amet, neque hic fugit, libero impedit vel enim cumque laudantium?
+        </p>
+    </div>
+
+    <div class="caixa6">
+        <div class="conteudo-titulo">
+            <span class="titulo">Praia</span>
+        </div>
+    </div>
+
 </body>
 </html>
