box sizing e border- radius

--- a/Linguagens/Udemy/CSS/Anotações CSS/Aula-85/Box-Sizing.html
+++ b/Linguagens/Udemy/CSS/Anotações CSS/Aula-85/Box-Sizing.html
@@ -3,10 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Box sizing</title>
+    <title>Box sizing e border radius</title>
+
+    <!--Link do Normalize CSS para navegadores diferentes-->
+    <link rel="stylesheet" href="../normalize/Normalize.css">
+
+    <!--Link do estilo CSS-->
     <link rel="stylesheet" href="style85.css">
+
+
+
+
+
 </head>
 <body>
     
+    <div id="caixa">
+        <h1>Título da caixa</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad sit odit in. Perspiciatis repellendus, cupiditate recusandae ducimus quam mollitia aperiam nisi quaerat eveniet iure iusto similique dolores delectus reprehenderit autem.
+        </p>
+    </div>
+
+    <img class="arredondamento" height="300px" width="300px" src="perfil.jpg" alt="imagem_perfil">
+
+    <div class="clear"></div>
+
+    <div id="caixa2">
+        <h1>Tiítulo caixa 2</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Non quam magni, incidunt cum dolor officiis facere nulla similique est distinctio aut dicta minima animi fugiat asperiores doloribus suscipit illum rerum?
+        </p>
+    </div>
+
+    <div id="caixa3">
+        <h1>Título Prefixo</h1>
+        <p>
+            Caixa com as propriedades de prefixo para funcionalidade de propriedades CSS em diferentes navegadores
+        </p>
+    </div>
+
+    <div class="clear"></div>
+
 </body>
 </html>
