--- a/Linguagens/Udemy/CSS/Anotações CSS/Aula-94/Flexbox.html
+++ b/Linguagens/Udemy/CSS/Anotações CSS/Aula-94/Flexbox.html
@@ -3,13 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FlexBox</title>
+    <title>FlexBox - Flexible box layout</title>
     <link rel="stylesheet" href="style94.css">
 </head>
 <body>
     
+<!-- A propriedade faz com que os itens fiquem organizados de forma flexivel, mais fácil-->
 
+    <h1>
+        FlexBox
+    </h1>
 
-    
+    <div id="conteudo"> <!--Container, o que contém todos os itens-->
+        <div class="item item1">01</div>
+        <div class="item item2">02</div>
+        <div class="item item3">03</div>
+        <div class="item ordem4">04</div>
+    </div>
+
 </body>
 </html>
