--- a/Linguagens/Udemy/CSS/Projeto_Museu_Nacional/index.html
+++ b/Linguagens/Udemy/CSS/Projeto_Museu_Nacional/index.html
@@ -7,48 +7,58 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="container">
     <header>
-        header
+        <!-- <img class="link_header" src="img/logo.png" alt="Logo_museu"> -->
+        <ul>
+            <li><a class="link_header" href="">HOME</a></li>
+            <li><a class="link_header" href="">EXPOSIÇÕES</a></li>
+            <li><a class="link_header" href="">PESQUISA</a></li>
+            <li><a class="link_header" href="">ACERVO</a></li>
+            <li><a class="link_header" href="">VÍDEOS</a></li>
+            <li><a class="link_header" href="">FOTOS</a></li>
+            <li><a class="link_header" href="">CONTATO</a></li>
+        </ul>
     </header>
 
     <main>
-        <section>
-            sessão foto museu
-        </section>
-
-        <section>
-            sessao citação
-        </section>
-
-        <section>
-            video youtube
-        </section>
-
-        <section>
-            maps
-        </section>
-
-
-        <article>
             <section>
-                input
+                sessão foto museu
             </section>
 
             <section>
-                galeria de fotos
+                sessao citação
             </section>
-        </article>
 
-        <section>
-            exposições
-        </section>
+            <section>
+                video youtube
+            </section>
 
-        <section>
-            texto de historia
-        </section>
+            <section>
+                maps
+            </section>
 
 
-    </main>
+            <article>
+                <section>
+                    input
+                </section>
 
+                <section>
+                    galeria de fotos
+                </section>
+            </article>
+
+            <section>
+                exposições
+            </section>
+
+            <section>
+                texto de historia
+            </section>
+
+
+        </main>
+    </div>
 </body>
 </html>
