--- a/Linguagens/Udemy/JAVASCRIPT/index.html
+++ b/Linguagens/Udemy/JAVASCRIPT/index.html
@@ -21,15 +21,17 @@
     */
 
    
-   const button = document.querySelector('button')
-   button.addEventListener('click', function(){
-       const audio = document.querySelector('audio')
-       audio.volume = 0.2
-       audio.play()
+//    const button = document.querySelector('button')
+//    button.addEventListener('click', function(){
+//        const audio = document.querySelector('audio')
+//        audio.volume = 0.2
+//        audio.play()
        
-    })
+//     })
 
+    function calcularAreaTerreno( largura, comprimento){
+        
 
-   
+    }
 
 </script>
