--- a/Linguagens/Udemy/JAVASCRIPT/funcoes_callback.html
+++ b/Linguagens/Udemy/JAVASCRIPT/funcoes_callback.html
@@ -12,7 +12,7 @@
     function exibirArtigo(id, callbackSucesso, callbackErro){
         //lógica: recuperar o id via requisição http
 
-        if (false){
+        if (true){
             callbackSucesso("Funções de callBack em JS", "Funções em JS são legais ")
         } else{
             callbackErro("Erro")
