--- a/Linguagens/Udemy/JAVASCRIPT/desafios/classificando_idades.html
+++ b/Linguagens/Udemy/JAVASCRIPT/desafios/classificando_idades.html
@@ -8,18 +8,28 @@
 
 <script>
 
-    var idade = prompt("Digite a idade")
-    idade = parseInt(idade)
+    // var idade = prompt("Digite a idade")
+    // idade = parseInt(idade)
 
-    if(idade >= 0 && idade <15){
-        document.write("Criança")
-    } else if(idade >= 15 && idade <30){
-        document.write("Jovem")
-    } else if(idade >=30 && idade <60){
-        document.write("Adulto")
-    } else{
-        document.write("Idoso")
-    }  
+    // if(idade >= 0 && idade <15){
+    //     document.write("Criança")
+    // } else if(idade >= 15 && idade <30){
+    //     document.write("Jovem")
+    // } else if(idade >=30 && idade <60){
+    //     document.write("Adulto")
+    // } else{
+    //     document.write("Idoso")
+    // }  
+
+      var ano = prompt("Digite o ano de nascimento") 
+        ano = parseInt(ano)
+
+    function calcularIdade(){
+        
+    }
+
+
+
 
 </script>
 <body>
