--- a/CIencia_Computacao/Aplicacoes_Internet/layouts.html
+++ b/CIencia_Computacao/Aplicacoes_Internet/layouts.html
@@ -12,6 +12,8 @@
             width: 100px;
             border: black solid 1px;
             float: left;
+
+            background-color: black;
         }
 
         
