--- a/CIencia_Computacao/Programacao_Web/index.html
+++ b/CIencia_Computacao/Programacao_Web/index.html
@@ -13,10 +13,15 @@
     <header>
     <h1>Lista de tarefas</h1>
     <input type="text" name="" id="tarefa" placeholder="Digite a sua tarefa">    
-    
+    <span><i class="fa-solid fa-plus" id="btn"></i></span>
     </header>
 
-
+    <ul id="lista">
+        <li><i class="fa-solid fa-check"></i>Realizar provas <i class="fa-solid fa-trash"></i></li>
+        <li><i class="fa-solid fa-check"></i>Lavar roupas <i class="fa-solid fa-trash"></i></li>
+        <li><i class="fa-solid fa-check"></i>Fazer janta <i class="fa-solid fa-trash"></i></li>
+        <li><i class="fa-solid fa-check"></i>Academia <i class="fa-solid fa-trash"></i></li>
+    </ul>
 
 
 
